Fix text visibility by removing height restriction and overflow hidden from artwork-info

--- a/src/pages/Search.css
+++ b/src/pages/Search.css
@@ -386,8 +386,6 @@
   flex-direction: column;
   position: relative;
   z-index: 2;
-  height: 200px;
-  overflow: hidden;
 }
 
 .artwork-info h3 {
